[package]
authors    = [ "David Roundy <daveroundy@gmail.com>" ]
categories = [ "data-structures" ]
keywords   = [ "compact", "set", "small" ]
name       = "tinyset"
version    = "0.5.2"

description  = "Size-optimized sets"
edition      = "2018"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/droundy/tinyset"
rust-version = "1.63"

readme = "README.md"

[dev-dependencies]

heapsize    = "0.4.2"
proptest    = "0.10"
quickcheck  = "0.9"
scaling     = "0.1.3"
stats_alloc = "0.1.8"

id-set     = "0.2.2"
roaring    = "0.6.0"
serde_json = "1.0"

[dependencies]
rand  = { version = "0.8.4", optional = true }
serde = { version = "1.0", optional = true }
winit = { version = "0.30.11", optional = true }

[features]

compactserde            = [ "serde" ]
default                 = [ "rand" ]
deterministic_iteration = [  ]

[[bench]]
harness = false
name    = "bench"
